@@ -1,11 +1,13 @@
 * v1.1.0 (unreleased)
   - New drop indicator style type: Segmented Indicators
+  - Added AutoHide / SideBar support
   - Added FocusScope support
   - Added DockWidget::isFocused() and DockWidgetBase::isFocusedChanged()
   - Added Config::Flag_AlwaysTitleBarWhenFloating, which complements Flag_HideTitleBarWhenTabsVisible
   - Added Config::Flag_DontUseUtilityWindowsForFloating
   - Added Config::Flag_TitleBarHasMinimizeButton
   - Added Config::Flag_TitleBarNoFloatButton
+  - Added Config::Flag_AutoHideSupport
   - Bugfixes:
     - Windows: Fixed windows not having proper minimum size.
     - Windows: Fixed moving windows across screens with different DPI (#72)
